Enhance model validation and processing: - Update validation logic to handle edge cases for date coverage. - Modify file processing to include flags for filling missing years. - Refactor task creation to accommodate new parameters and improve clarity.

--- a/src/idd_climate_models/clean_and_split/spot_check.ipynb
+++ b/src/idd_climate_models/clean_and_split/spot_check.ipynb
@@ -25,7 +25,7 @@
       "[11/26] Validating EC-Earth3-Veg... ✓ COMPLETE\n",
       "[12/26] Validating EC-Earth3-Veg-LR... ✓ COMPLETE\n",
       "[13/26] Validating FGOALS-g3... ✗ INCOMPLETE\n",
-      "[14/26] Validating IITM-ESM... ✗ INCOMPLETE\n",
+      "[14/26] Validating IITM-ESM... ✓ COMPLETE\n",
       "[15/26] Validating INM-CM4-8... ✓ COMPLETE\n",
       "[16/26] Validating INM-CM5-0... ✓ COMPLETE\n",
       "[17/26] Validating IPSL-CM6A-LR... ✓ COMPLETE\n",
@@ -40,10 +40,10 @@
       "[26/26] Validating TaiESM1... ✓ COMPLETE\n",
       "================================================================================\n",
       "\n",
-      "Summary: 22/26 models complete (84.6%)\n",
+      "Summary: 23/26 models complete (88.5%)\n",
       "\n",
-      "Fully downloaded models: 22\n",
-      "['ACCESS-CM2', 'ACCESS-ESM1-5', 'AWI-CM-1-1-MR', 'BCC-CSM2-MR', 'CESM2-WACCM', 'CMCC-CM2-SR5', 'CMCC-ESM2', 'CanESM5', 'EC-Earth3', 'EC-Earth3-Veg', 'EC-Earth3-Veg-LR', 'INM-CM4-8', 'INM-CM5-0', 'IPSL-CM6A-LR', 'MIROC6', 'MPI-ESM1-2-HR', 'MPI-ESM1-2-LR', 'MRI-ESM2-0', 'NESM3', 'NorESM2-LM', 'NorESM2-MM', 'TaiESM1']\n"
+      "Fully downloaded models: 23\n",
+      "['ACCESS-CM2', 'ACCESS-ESM1-5', 'AWI-CM-1-1-MR', 'BCC-CSM2-MR', 'CESM2-WACCM', 'CMCC-CM2-SR5', 'CMCC-ESM2', 'CanESM5', 'EC-Earth3', 'EC-Earth3-Veg', 'EC-Earth3-Veg-LR', 'IITM-ESM', 'INM-CM4-8', 'INM-CM5-0', 'IPSL-CM6A-LR', 'MIROC6', 'MPI-ESM1-2-HR', 'MPI-ESM1-2-LR', 'MRI-ESM2-0', 'NESM3', 'NorESM2-LM', 'NorESM2-MM', 'TaiESM1']\n"
      ]
     }
    ],
@@ -78,7 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "id": "010eb87c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'complete': False,\n",
+       " 'issues': [],\n",
+       " 'grids': {'gn': {'complete': False,\n",
+       "   'issues': [],\n",
+       "   'time_periods': {'Amon': {'complete': False,\n",
+       "     'files': ['/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_201501-202412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_202501-203412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_203501-204412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_204501-205412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_205501-206412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_206501-207412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_207501-208412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_208501-209412.nc',\n",
+       "      '/mnt/team/rapidresponse/pub/tropical-storms/data/raw/cmip6/IITM-ESM/r1i1p1f1/ssp126/hus/gn/Amon/hus_Amon_IITM-ESM_ssp126_r1i1p1f1_gn_209501-209912.nc'],\n",
+       "     'issues': ['Coverage ends too early: 209912, expected until: 210012']}}}}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['IITM-ESM']['variants']['r1i1p1f1']['scenarios']['ssp126']['variables']['hus']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "eb45a393",
    "metadata": {},
    "outputs": [
@@ -101,7 +136,7 @@
       "[11/26] Validating EC-Earth3-Veg... ✓ COMPLETE\n",
       "[12/26] Validating EC-Earth3-Veg-LR... ✓ COMPLETE\n",
       "[13/26] Validating FGOALS-g3... ✗ INCOMPLETE\n",
-      "[14/26] Validating IITM-ESM... ✗ INCOMPLETE\n",
+      "[14/26] Validating IITM-ESM... ✓ COMPLETE\n",
       "[15/26] Validating INM-CM4-8... ✓ COMPLETE\n",
       "[16/26] Validating INM-CM5-0... ✓ COMPLETE\n",
       "[17/26] Validating IPSL-CM6A-LR... ✓ COMPLETE\n",
@@ -116,11 +151,11 @@
       "[26/26] Validating TaiESM1... ✓ COMPLETE\n",
       "================================================================================\n",
       "\n",
-      "Summary: 22/26 models complete (84.6%)\n",
+      "Summary: 23/26 models complete (88.5%)\n",
       "\n",
-      "Fully downloaded models: 22\n",
-      "['ACCESS-CM2', 'ACCESS-ESM1-5', 'AWI-CM-1-1-MR', 'BCC-CSM2-MR', 'CESM2-WACCM', 'CMCC-CM2-SR5', 'CMCC-ESM2', 'CanESM5', 'EC-Earth3', 'EC-Earth3-Veg', 'EC-Earth3-Veg-LR', 'INM-CM4-8', 'INM-CM5-0', 'IPSL-CM6A-LR', 'MIROC6', 'MPI-ESM1-2-HR', 'MPI-ESM1-2-LR', 'MRI-ESM2-0', 'NESM3', 'NorESM2-LM', 'NorESM2-MM', 'TaiESM1']\n",
-      "Found 4 incomplete models. Displaying issues:\n",
+      "Fully downloaded models: 23\n",
+      "['ACCESS-CM2', 'ACCESS-ESM1-5', 'AWI-CM-1-1-MR', 'BCC-CSM2-MR', 'CESM2-WACCM', 'CMCC-CM2-SR5', 'CMCC-ESM2', 'CanESM5', 'EC-Earth3', 'EC-Earth3-Veg', 'EC-Earth3-Veg-LR', 'IITM-ESM', 'INM-CM4-8', 'INM-CM5-0', 'IPSL-CM6A-LR', 'MIROC6', 'MPI-ESM1-2-HR', 'MPI-ESM1-2-LR', 'MRI-ESM2-0', 'NESM3', 'NorESM2-LM', 'NorESM2-MM', 'TaiESM1']\n",
+      "Found 3 incomplete models. Displaying issues:\n",
       "\n",
       "================================================================================\n",
       "Model: CESM2\n",
@@ -145,116 +180,6 @@
       "        Amon [✗]\n",
       "          ⚠ Gap between 201912 and 201501\n",
       "          📁 19 files\n",
-      "  ssp245 [✗]\n",
-      "    ua [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage starts too late: 20200101, expected by: 20150101\n",
-      "          📁 80 files\n",
-      "    va [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage starts too late: 20200101, expected by: 20150101\n",
-      "          📁 80 files\n",
-      "\n",
-      "================================================================================\n",
-      "Model: IITM-ESM\n",
-      "Status: ✗ INCOMPLETE\n",
-      "================================================================================\n",
-      "Variant: r1i1p1f1 [✗]\n",
-      "  ssp126 [✗]\n",
-      "    hus [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    psl [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    ta [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    tos [✗]\n",
-      "      gn [✗]\n",
-      "        Omon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 1 files\n",
-      "    ua [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 20991231, expected until: 21001231\n",
-      "          📁 17 files\n",
-      "    va [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 20991231, expected until: 21001231\n",
-      "          📁 17 files\n",
-      "  ssp245 [✗]\n",
-      "    hus [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    psl [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    ta [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    tos [✗]\n",
-      "      gn [✗]\n",
-      "        Omon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 17 files\n",
-      "    ua [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 20991231, expected until: 21001231\n",
-      "          📁 17 files\n",
-      "    va [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 20991231, expected until: 21001231\n",
-      "          📁 17 files\n",
-      "  ssp585 [✗]\n",
-      "    hus [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    psl [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    ta [✗]\n",
-      "      gn [✗]\n",
-      "        Amon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 9 files\n",
-      "    tos [✗]\n",
-      "      gn [✗]\n",
-      "        Omon [✗]\n",
-      "          ⚠ Coverage ends too early: 209912, expected until: 210012\n",
-      "          📁 17 files\n",
-      "    ua [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 20991231, expected until: 21001231\n",
-      "          📁 17 files\n",
-      "    va [✗]\n",
-      "      gn [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 20991231, expected until: 21001231\n",
-      "          📁 17 files\n",
       "\n",
       "================================================================================\n",
       "Model: KACE-1-0-G\n",
@@ -271,40 +196,7 @@
       "      gr [✗]\n",
       "        day [✗]\n",
       "          ⚠ Coverage ends too early: 20141230, expected until: 20141231\n",
-      "          📁 2 files\n",
-      "  ssp126 [✗]\n",
-      "    ua [✗]\n",
-      "      gr [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 21001230, expected until: 21001231\n",
-      "          📁 3 files\n",
-      "    va [✗]\n",
-      "      gr [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 21001230, expected until: 21001231\n",
-      "          📁 3 files\n",
-      "  ssp245 [✗]\n",
-      "    ua [✗]\n",
-      "      gr [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 21001230, expected until: 21001231\n",
-      "          📁 3 files\n",
-      "    va [✗]\n",
-      "      gr [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 21001230, expected until: 21001231\n",
-      "          📁 3 files\n",
-      "  ssp585 [✗]\n",
-      "    ua [✗]\n",
-      "      gr [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 21001230, expected until: 21001231\n",
-      "          📁 3 files\n",
-      "    va [✗]\n",
-      "      gr [✗]\n",
-      "        day [✗]\n",
-      "          ⚠ Coverage ends too early: 21001230, expected until: 21001231\n",
-      "          📁 3 files\n"
+      "          📁 2 files\n"
      ]
     }
    ],
