Implement validation and resource estimation functions for climate models
- Added `dictionary_utils.py` for handling validation result trimming and parsing.
- Introduced `io_compare_utils.py` to compare validation results between input and output models.
- Created `resource_functions.py` for estimating resource requirements based on file sizes.
- Developed `validation_functions.py` to validate model structures, including checks for grid compatibility and file completeness.
- Enhanced validation logic to support strict grid checks and improved error handling.
- Updated logging functionality to capture validation results in a structured format.

--- a/notebooks/pre_process/01_fill_and_yearly_split_parallel.ipynb
+++ b/notebooks/pre_process/01_fill_and_yearly_split_parallel.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "code",
+   "cell_data_type": "code",
    "execution_count": null,
    "id": "89ffc6e3",
    "metadata": {},
@@ -11,7 +11,7 @@
     "import sys\n",
     "import getpass\n",
     "import uuid\n",
-    "from jobmon.client.tool import Tool  # type: ignore\n",
+    "from jobmon.client.tool import Tool  # data_type: ignore\n",
     "from pathlib import Path\n",
     "\n",
     "import idd_climate_models.constants as rfc\n",
@@ -86,10 +86,10 @@
     "        \"--scenario {{scenario}} \"\n",
     "        \"--variable {{variable}} \"\n",
     "        \"--grid {{grid}} \"\n",
-    "        \"--time_period {{time_period}} \"\n",
+    "        \"--frequency {{frequency}} \"\n",
     "        \"--file_path {{file_path}} \"\n",
     "    ).format(script_root=SCRIPT_ROOT),\n",
-    "    node_args=[\"model\", \"variant\", \"scenario\", \"variable\", \"grid\", \"time_period\", \"file_path\"],\n",
+    "    node_args=[\"model\", \"variant\", \"scenario\", \"variable\", \"grid\", \"frequency\", \"file_path\"],\n",
     "    task_args=[],\n",
     "    op_args=[],\n",
     ")\n",
@@ -105,9 +105,9 @@
     "            for variable in variables:\n",
     "                grids = variables[variable]['grids']\n",
     "                for grid in grids:\n",
-    "                    time_periods = grids[grid]['time_periods']\n",
-    "                    for time_period in time_periods:\n",
-    "                        files = time_periods[time_period]['files']\n",
+    "                    frequencys = grids[grid]['frequencys']\n",
+    "                    for frequency in frequencys:\n",
+    "                        files = frequencys[frequency]['files']\n",
     "                        for file_path in files:\n",
     "                            task = task_template.create_task(\n",
     "                                model=model,\n",
@@ -115,7 +115,7 @@
     "                                scenario=scenario,\n",
     "                                variable=variable,\n",
     "                                grid=grid,\n",
-    "                                time_period=time_period,\n",
+    "                                frequency=frequency,\n",
     "                                file_path=file_path,\n",
     "                            )\n",
     "                            tasks.append(task)\n",
@@ -157,7 +157,7 @@
     "version": 3
    },
    "file_extension": ".py",
-   "mimetype": "text/x-python",
+   "mimedata_type": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
