--- a/src/idd_climate_models/01_run_tc_risk/01_create_time_period_chunks.ipynb
+++ b/src/idd_climate_models/01_run_tc_risk/01_create_time_period_chunks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e6d8b88e",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,25 @@
       "Summary: 22/23 models complete. Parsed log (up to 'grid') written to /mnt/team/rapidresponse/pub/tropical-storms/data/processed/cmip6/validation_log.json\n",
       "\n",
       "Validation complete for: tc_risk, input, cmip6\n",
-      "Summary: 22/23 models complete. Parsed log (up to 'scenario') written to /mnt/team/rapidresponse/pub/tropical-storms/tc_risk/input/cmip6/validation_log.json\n"
+      "Summary: 9/22 models complete. Parsed log (up to 'scenario') written to /mnt/team/rapidresponse/pub/tropical-storms/tc_risk/input/cmip6/validation_log.json\n",
+      "\n",
+      "================================================================================\n",
+      "STEP 3: Creating Jobmon tasks (Dynamic Resources)\n",
+      "================================================================================\n",
+      "Variable: ua | Model: ACCESS-CM2 | Variant: r1i1p1f1 | Scenario: historical | Time Bin: 1970-1989 ->\n",
+      "        Requesting Mem: 13G, Run: 15m, Cores: 2\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unexpected kwarg. Task Template requires {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario'}, got {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario', 'needs_regridding'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 225\u001b[39m\n\u001b[32m    223\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m        Requesting Mem: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mmemory\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Run: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mruntime\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Cores: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mcores\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    224\u001b[39m \u001b[38;5;66;03m# --- TASK CREATION ---\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m225\u001b[39m process_task = \u001b[43mprocess_template\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate_task\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    226\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Inject dynamic resources here\u001b[39;49;00m\n\u001b[32m    227\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompute_resources\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m    228\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    229\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcores\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcores\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    230\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mruntime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mruntime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    231\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mqueue\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mqueue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# Use the default queue if specific queue not needed\u001b[39;49;00m\n\u001b[32m    232\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mproject\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdata_source\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mDATA_SOURCE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    235\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    236\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvariant\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvariant_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    237\u001b[39m \u001b[43m    \u001b[49m\u001b[43mscenario\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenario\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    238\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtime_bin\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime_bin_str\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    239\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvariable\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvariable\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    240\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrid\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetails\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mgrid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    241\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfrequency\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetails\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfrequency\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    242\u001b[39m \u001b[43m    \u001b[49m\u001b[43mneeds_regridding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mneeds_regridding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    243\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    245\u001b[39m process_tasks.append(process_task)\n\u001b[32m    247\u001b[39m \u001b[38;5;66;03m# Add dependency: process_task depends on folder_task\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda/envs/idd-climate-models/lib/python3.12/site-packages/jobmon/client/task_template.py:592\u001b[39m, in \u001b[36mTaskTemplate.create_task\u001b[39m\u001b[34m(self, name, upstream_tasks, task_attributes, max_attempts, compute_resources, compute_resources_callable, resource_scales, cluster_name, fallback_queues, **kwargs)\u001b[39m\n\u001b[32m    590\u001b[39m \u001b[38;5;66;03m# kwargs quality assurance\u001b[39;00m\n\u001b[32m    591\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.active_task_template_version.template_args != \u001b[38;5;28mset\u001b[39m(kwargs.keys()):\n\u001b[32m--> \u001b[39m\u001b[32m592\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    593\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnexpected kwarg. Task Template requires \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    594\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.active_task_template_version.template_args\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mset\u001b[39m(kwargs.keys())\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    595\u001b[39m     )\n\u001b[32m    597\u001b[39m \u001b[38;5;66;03m# validate non-empty resource_scale dicts\u001b[39;00m\n\u001b[32m    598\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m resource_scales:\n",
+      "\u001b[31mValueError\u001b[39m: Unexpected kwarg. Task Template requires {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario'}, got {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario', 'needs_regridding'}"
      ]
     }
    ],
@@ -32,7 +50,7 @@
     "import idd_climate_models.constants as rfc\n",
     "from idd_climate_models.io_compare_utils import compare_model_validation\n",
     "from idd_climate_models.dictionary_utils import parse_results\n",
-    "from idd_climate_models.resource_functions import get_rep_file_size_gb, get_resource_tier\n",
+    "from idd_climate_models.resource_functions import get_rep_file_size_gb, get_resource_info\n",
     "\n",
     "# --- CONSTANT DEFINITIONS (from rfc) ---\n",
     "repo_name = rfc.repo_name\n",
@@ -91,18 +109,177 @@
     "        'frequency': item['frequency']\n",
     "    }\n",
     "\n",
-    "def get_time_bins(scenario_name, bin_size_years):\n",
-    "    date_ranges = rfc.VALIDATION_RULES['tc_risk']['time-period']['date_ranges']\n",
-    "    if scenario_name not in date_ranges:\n",
-    "        print(f\"Warning: No date range found for scenario '{scenario_name}'\")\n",
-    "        return []\n",
-    "    start_year, end_year = date_ranges[scenario_name]\n",
-    "    return [(y, min(y + bin_size_years - 1, end_year)) for y in range(start_year, end_year + 1, bin_size_years)]\n",
-    "\n",
     "TIME_BINS = {\n",
-    "    scenario: get_time_bins(scenario, BIN_SIZE_YEARS)\n",
+    "    scenario: rfc.get_time_bins(scenario, BIN_SIZE_YEARS)\n",
     "    for scenario in rfc.SCENARIOS\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "# ============================================================================\n",
+    "# JOBMON SETUP\n",
+    "# ============================================================================\n",
+    "\n",
+    "user = getpass.getuser()\n",
+    "\n",
+    "log_dir = Path(\"/mnt/team/idd/pub/\")\n",
+    "log_dir.mkdir(parents=True, exist_ok=True)\n",
+    "stdout_dir = log_dir / \"stdout\"\n",
+    "stderr_dir = log_dir / \"stderr\" \n",
+    "stdout_dir.mkdir(parents=True, exist_ok=True)\n",
+    "stderr_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "project = \"proj_rapidresponse\"\n",
+    "queue = 'all.q' # Switched to 'all.q' for general use, but kept long.q settings in template\n",
+    "\n",
+    "wf_uuid = uuid.uuid4()\n",
+    "tool_name = f\"{package_name}_tc_risk_reorganization_tool\"\n",
+    "tool = Tool(name=tool_name)\n",
+    "\n",
+    "workflow = tool.create_workflow(\n",
+    "    name=f\"{tool_name}_workflow_{wf_uuid}\",\n",
+    "    max_concurrently_running=5000,\n",
+    ")\n",
+    "\n",
+    "# Default compute resources for small tasks (Folder Creation)\n",
+    "workflow.set_default_compute_resources_from_dict(\n",
+    "    cluster_name=\"slurm\",\n",
+    "    dictionary={\n",
+    "        \"memory\": \"5G\",\n",
+    "        \"cores\": 1,\n",
+    "        \"runtime\": \"10m\",\n",
+    "        \"queue\": queue,\n",
+    "        \"project\": project,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# LEVEL 1: Folder creation task template\n",
+    "folder_template = tool.get_task_template(\n",
+    "    template_name=\"create_folders\",\n",
+    "    default_cluster_name=\"slurm\",\n",
+    "    default_compute_resources={\n",
+    "        \"memory\": \"1G\",\n",
+    "        \"cores\": 1,\n",
+    "        \"runtime\": \"5m\",\n",
+    "        \"queue\": queue,\n",
+    "        \"project\": project,\n",
+    "    },\n",
+    "    command_template=(\n",
+    "        \"python {script_root}/1a_create_tc_risk_input_folder.py \"\n",
+    "        \"--data_source {{data_source}} \" \n",
+    "        \"--model {{model}} \"\n",
+    "        \"--variant {{variant}} \" \n",
+    "        \"--scenario {{scenario}} \"\n",
+    "        \"--time_bin {{time_bin}} \"\n",
+    "    ).format(script_root=SCRIPT_ROOT),\n",
+    "    node_args=[\"data_source\", \"model\", \"variant\", \"scenario\", \"time_bin\"],\n",
+    "    task_args=[],\n",
+    "    op_args=[],\n",
+    ")\n",
+    "\n",
+    "# LEVEL 2: Processing task template (Dynamic Resources must be applied here)\n",
+    "process_template = tool.get_task_template(\n",
+    "    template_name=\"process_variable_frequency\",\n",
+    "    default_cluster_name=\"slurm\",\n",
+    "    default_compute_resources={\n",
+    "        \"memory\": \"15G\",\n",
+    "        \"cores\": 4, # Changed from 1 to match expected need for xarray ops\n",
+    "        \"runtime\": \"1h\",\n",
+    "        \"queue\": 'long.q', # Default to a longer queue for processing\n",
+    "        \"project\": project,\n",
+    "    },\n",
+    "    command_template=(\n",
+    "        \"python {script_root}/1b_process_time_chunk.py \"\n",
+    "        \"--data_source {{data_source}} \"\n",
+    "        \"--model {{model}} \"\n",
+    "        \"--variant {{variant}} \"\n",
+    "        \"--scenario {{scenario}} \"\n",
+    "        \"--time_bin {{time_bin}} \"\n",
+    "        \"--variable {{variable}} \"\n",
+    "        \"--grid {{grid}} \"\n",
+    "        \"--frequency {{frequency}} \"\n",
+    "        \"--needs_regridding {{needs_regridding}} \"\n",
+    "    ).format(script_root=SCRIPT_ROOT),\n",
+    "    node_args=[\"data_source\", \"model\", \"variant\", \"scenario\", \"time_bin\", \"variable\", \"grid\", \"frequency\", \"needs_regridding\"],\n",
+    "    task_args=[],\n",
+    "    op_args=[],\n",
+    ")\n",
+    "\n",
+    "# ============================================================================\n",
+    "# TASK CREATION AND DEPENDENCY SETUP (Single Loop)\n",
+    "# ============================================================================\n",
+    "\n",
+    "folder_task_map = {}\n",
+    "folder_tasks = []\n",
+    "process_tasks = []\n",
+    "dependencies = []\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"STEP 3: Creating Jobmon tasks (Dynamic Resources)\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "for mv_info in model_variants_to_run:\n",
+    "    model_name = mv_info['model']\n",
+    "    variant_name = mv_info['variant']\n",
+    "    \n",
+    "    for scenario in rfc.SCENARIOS:\n",
+    "        for time_bin_tuple in TIME_BINS[scenario]:\n",
+    "            time_bin_str = f\"{time_bin_tuple[0]}-{time_bin_tuple[1]}\"\n",
+    "            \n",
+    "            parent_key = (model_name, variant_name, scenario, time_bin_str)\n",
+    "            \n",
+    "            # --- LEVEL 1: CREATE PARENT (FOLDER) TASK ---\n",
+    "            folder_task = folder_template.create_task(\n",
+    "                data_source = DATA_SOURCE,\n",
+    "                model = model_name,\n",
+    "                variant = variant_name,\n",
+    "                scenario = scenario,\n",
+    "                time_bin = time_bin_str,\n",
+    "            )\n",
+    "            \n",
+    "            folder_tasks.append(folder_task)\n",
+    "            folder_task_map[parent_key] = folder_task\n",
+    "            \n",
+    "            # --- LEVEL 2: CREATE CHILD (PROCESSING) TASKS AND DEPENDENCIES ---\n",
+    "            for variable in rfc.VARIABLES[DATA_SOURCE]:\n",
+    "                \n",
+    "                detail_lookup_key = (model_name, variant_name, scenario, variable)\n",
+    "                details = variable_detail_map.get(detail_lookup_key)\n",
+    "                \n",
+    "                if not details:\n",
+    "                    continue \n",
+    "\n",
+    "                # --- DYNAMIC RESOURCE CALCULATION ---\n",
+    "                \n",
+    "                # 1. CONSTRUCT PATH TO A REPRESENTATIVE INPUT FILE\n",
+    "                source_file_dir = PROCESSED_DATA_PATH / DATA_SOURCE / model_name / variant_name / scenario / variable / details['grid'] / details['frequency']\n",
+    "                resource_request, needs_regridding = get_resource_info(file_path=source_file_dir, representative='first', num_files = BIN_SIZE_YEARS)\n",
+    "                print(f\"Variable: {variable} | Model: {model_name} | Variant: {variant_name} | Scenario: {scenario} | Time Bin: {time_bin_str} ->\" )\n",
+    "                print(f\"        Requesting Mem: {resource_request['memory']}, Run: {resource_request['runtime']}, Cores: {resource_request['cores']}\")\n",
+    "                # --- TASK CREATION ---\n",
+    "                process_task = process_template.create_task(\n",
+    "                    # Inject dynamic resources here\n",
+    "                    compute_resources={\n",
+    "                        \"memory\": resource_request[\"memory\"],\n",
+    "                        \"cores\": resource_request[\"cores\"],\n",
+    "                        \"runtime\": resource_request[\"runtime\"],\n",
+    "                        \"queue\": queue, # Use the default queue if specific queue not needed\n",
+    "                        \"project\": project,\n",
+    "                    },\n",
+    "                    data_source = DATA_SOURCE,\n",
+    "                    model = model_name,\n",
+    "                    variant = variant_name,\n",
+    "                    scenario = scenario,\n",
+    "                    time_bin = time_bin_str,\n",
+    "                    variable = variable,\n",
+    "                    grid = details['grid'],\n",
+    "                    frequency = details['frequency'],\n",
+    "                    needs_regridding=needs_regridding,\n",
+    "                )\n",
+    "                \n",
+    "                process_tasks.append(process_task)\n",
+    "                \n",
+    "                # Add dependency: process_task depends on folder_task\n",
+    "                dependencies.append((process_task, folder_task))\n",
+    "\n"
    ]
   },
   {
