altered first step of pipeline

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -43,8 +43,8 @@
     "\n",
     "\n",
     "\n",
-    "def get_time_bins(scenario_name, bin_size_years):\n",
-    "    date_ranges = rfc.VALIDATION_RULES['tc_risk']['time-period']['date_ranges']\n",
+    "def get_time_periods(scenario_name, bin_size_years):\n",
+    "    date_ranges = rfc.VALIDATION_RULES['tc_risk']['time_period']['date_ranges']\n",
     "    if scenario_name not in date_ranges:\n",
     "        print(f\"Warning: No date range found for scenario '{scenario_name}'\")\n",
     "        return []\n",
@@ -52,23 +52,23 @@
     "    return [(y, min(y + bin_size_years - 1, end_year)) for y in range(start_year, end_year + 1, bin_size_years)]\n",
     "\n",
     "TIME_BINS = {\n",
-    "    scenario: get_time_bins(scenario, BIN_SIZE_YEARS)\n",
+    "    scenario: get_time_periods(scenario, BIN_SIZE_YEARS)\n",
     "    for scenario in rfc.SCENARIOS\n",
     "}\n",
     "\n",
     "target_output_path = rfc.TC_RISK_OUTPUT_PATH / DATA_SOURCE\n",
-    "def get_output_dir(model, scenario, time_bin):\n",
-    "    output_dir_parent = f'{target_output_path}/{model}/r1i1p1f1/{scenario}/{time_bin[0]}-{time_bin[1]}'\n",
+    "def get_output_dir(model, scenario, time_period):\n",
+    "    output_dir_parent = f'{target_output_path}/{model}/r1i1p1f1/{scenario}/{time_period[0]}-{time_period[1]}'\n",
     "    return Path(output_dir_parent)\n",
     "\n",
-    "def get_basin_dir(model, scenario, time_bin, basin):\n",
-    "    output_dir = get_output_dir(model, scenario, time_bin)\n",
+    "def get_basin_dir(model, scenario, time_period, basin):\n",
+    "    output_dir = get_output_dir(model, scenario, time_period)\n",
     "    return output_dir / basin\n",
     "\n",
-    "def get_track_path(model, scenario, time_bin, basin, draw):\n",
-    "    output_dir = get_output_dir(model, scenario, time_bin)\n",
+    "def get_track_path(model, scenario, time_period, basin, draw):\n",
+    "    output_dir = get_output_dir(model, scenario, time_period)\n",
     "    draw_text = f'_e{draw - 1}' if draw > 0 else ''\n",
-    "    track_file = f'tracks_{basin}_{model}_{scenario}_r1i1p1f1_{time_bin[0]}01_{time_bin[1]}12{draw_text}.nc'\n",
+    "    track_file = f'tracks_{basin}_{model}_{scenario}_r1i1p1f1_{time_period[0]}01_{time_period[1]}12{draw_text}.nc'\n",
     "    return output_dir / basin / track_file"
    ]
   },
@@ -120,8 +120,8 @@
     "\n",
     "time_datasets = []\n",
     "years = []\n",
-    "for time_bin in TIME_BINS[scenario]:\n",
-    "    data_dir = get_basin_dir(model, scenario, time_bin, basin)\n",
+    "for time_period in TIME_BINS[scenario]:\n",
+    "    data_dir = get_basin_dir(model, scenario, time_period, basin)\n",
     "    \n",
     "    # Get all .nc files and sort them so the file without extension comes first\n",
     "    fn_list = sorted([str(f) for f in data_dir.glob('*.nc')], \n",
@@ -136,7 +136,7 @@
     "        compat='override'\n",
     "    )\n",
     "    time_datasets.append(ds_time)\n",
-    "    years.extend(list(range(time_bin[0], time_bin[1] + 1)))\n"
+    "    years.extend(list(range(time_period[0], time_period[1] + 1)))\n"
    ]
   },
   {
@@ -631,9 +631,9 @@
    ],
    "source": [
     "\n",
-    "output_path = get_output_dir(model, scenario, time_bin)\n",
+    "output_path = get_output_dir(model, scenario, time_period)\n",
     "print(f\"Output path: {output_path}\")\n",
-    "track_path = get_track_path(model, scenario, time_bin, basin, draw=0)\n",
+    "track_path = get_track_path(model, scenario, time_period, basin, draw=0)\n",
     "print(f\"Track path: {track_path}\")"
    ]
   },
