--- a/notebooks/analysis_script.ipynb
+++ b/notebooks/analysis_script.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# Pre-calculate all time bins (This is efficient and kept)\n",
     "TIME_BINS: Dict[str, List[Tuple[int, int]]] = {\n",
-    "    scenario: rfc.get_time_bins(scenario, BIN_SIZE_YEARS)\n",
+    "    scenario: rfc.get_time_periods(scenario, BIN_SIZE_YEARS)\n",
     "    for scenario in ssp_scenario_map\n",
     "}"
    ]
@@ -55,27 +55,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_output_dir(model: str, scenario: str, time_bin: Tuple[int, int]) -> Path:\n",
+    "def get_output_dir(model: str, scenario: str, time_period: Tuple[int, int]) -> Path:\n",
     "    \"\"\"Constructs the parent directory for a time bin.\"\"\"\n",
     "    # Simplified Path construction\n",
-    "    time_bin_str = f'{time_bin[0]}-{time_bin[1]}'\n",
-    "    return TC_RISK_OUTPUT_PATH / DATA_SOURCE / model / VARIANT / scenario / time_bin_str\n",
+    "    time_period_str = f'{time_period[0]}-{time_period[1]}'\n",
+    "    return TC_RISK_OUTPUT_PATH / DATA_SOURCE / model / VARIANT / scenario / time_period_str\n",
     "\n",
-    "def get_track_path(model: str, scenario: str, time_bin: Tuple[int, int], basin: str, draw: int) -> Path:\n",
+    "def get_track_path(model: str, scenario: str, time_period: Tuple[int, int], basin: str, draw: int) -> Path:\n",
     "    \"\"\"Constructs the full file path for a track file.\"\"\"\n",
-    "    output_dir_parent = get_output_dir(model, scenario, time_bin)\n",
+    "    output_dir_parent = get_output_dir(model, scenario, time_period)\n",
     "    \n",
     "    # Draws are 1-based, array indices are 0-based (e.g., draw 1 is _e0)\n",
     "    draw_text = f'_e{draw - 1}' if draw > 0 else ''\n",
     "    \n",
     "    # Use f-strings for time strings, ensuring 4-digit years\n",
-    "    time_start_str = f'{time_bin[0]:04d}01' # Added :04d for explicit 4-digit formatting\n",
-    "    time_end_str = f'{time_bin[1]:04d}12'\n",
+    "    time_start_str = f'{time_period[0]:04d}01' # Added :04d for explicit 4-digit formatting\n",
+    "    time_end_str = f'{time_period[1]:04d}12'\n",
     "    \n",
     "    # File name construction\n",
     "    track_file = f'tracks_{basin}_{model}_{scenario}_{VARIANT}_{time_start_str}_{time_end_str}{draw_text}.nc'\n",
     "    \n",
-    "    # The basin directory is a subdirectory of the time-period directory\n",
+    "    # The basin directory is a subdirectory of the time_period directory\n",
     "    return output_dir_parent / basin / track_file"
    ]
   },
@@ -211,12 +211,12 @@
     "    print(f\"\\nProcessing model: {model}\")\n",
     "    for scenario in ssp_scenario_map:\n",
     "        print(f\"  Scenario: {scenario}\")\n",
-    "        scenario_time_bins = TIME_BINS.get(scenario, [])\n",
-    "        for time_bin_tuple in scenario_time_bins:\n",
-    "            print(f\"    Time bin: {time_bin_tuple[0]}-{time_bin_tuple[1]}\")            \n",
+    "        scenario_time_periods = TIME_BINS.get(scenario, [])\n",
+    "        for time_period_tuple in scenario_time_periods:\n",
+    "            print(f\"    Time bin: {time_period_tuple[0]}-{time_period_tuple[1]}\")            \n",
     "            for basin in BASINS:\n",
     "                for draw in range(0, NUM_DRAWS):\n",
-    "                    file_path = get_track_path(model, scenario, time_bin_tuple, basin, draw)\n",
+    "                    file_path = get_track_path(model, scenario, time_period_tuple, basin, draw)\n",
     "                    if not file_path.exists():\n",
     "                        continue # Skip non-existent files\n",
     "                    # Call the encapsulated processing function\n",
