--- a/notebooks/archive/01_run_tc_risk/02_run_tc_risk_one_off.ipynb
+++ b/notebooks/archive/01_run_tc_risk/02_run_tc_risk_one_off.ipynb
@@ -45,14 +45,14 @@
     "model = 'ACCESS-CM2'\n",
     "variant = 'r1i1p1f1'\n",
     "scenario = 'ssp126'\n",
-    "time_bin = '2015-2034'\n",
+    "time_period = '2015-2034'\n",
     "basin = 'GL'\n",
     "args = argparse.Namespace(\n",
     "    data_source=data_source,\n",
     "    model=model,\n",
     "    variant=variant,\n",
     "    scenario=scenario,\n",
-    "    time_bin=time_bin,\n",
+    "    time_period=time_period,\n",
     "    basin=basin\n",
     ")\n",
     "create_custom_namelist(args)\n",
@@ -128,7 +128,7 @@
     "\n",
     "    \n",
     "\n",
-    "    # 1B. Extract Start and End Year from time_bin\n",
+    "    # 1B. Extract Start and End Year from time_period\n",
     "\n",
     "    \n",
     "    # 2. Build Replacements Dictionary (Automatic and Command-Line)\n",
@@ -137,7 +137,7 @@
     "    # (3) Update the namelist with optional command-line overrides\n",
     "    # Process only non-derived, optional arguments provided by the user\n",
     "    for arg_name, value in arg_dict.items():\n",
-    "        if value is not None and arg_name not in ['data_source', 'model', 'variant', 'scenario', 'time_bin', 'script_type', 'basin']:\n",
+    "        if value is not None and arg_name not in ['data_source', 'model', 'variant', 'scenario', 'time_period', 'script_type', 'basin']:\n",
     "            # The variable name in the namelist file must match the argument name (e.g., 'n_procs')\n",
     "            var_name = arg_name.replace('-', '_') \n",
     "            \n",
@@ -322,7 +322,7 @@
    "source": [
     "validation_results_for_tasks = parse_results(\n",
     "    input_validation_dict, \n",
-    "    detail='time-period'\n",
+    "    detail='time_period'\n",
     ")"
    ]
   },
