--- a/src/idd_climate_models/01_run_tc_risk/_00_guide.ipynb
+++ b/src/idd_climate_models/01_run_tc_risk/_00_guide.ipynb
@@ -1,18 +1,114 @@
 {
  "cells": [
   {
-   "cell_data_type": "markdown",
-   "id": "0c1e4f4a",
+   "cell_type": "markdown",
+   "id": "89dd633c",
    "metadata": {},
    "source": [
-    "# 01_run_tc_risk\n",
-    " - For each model/variant/scenario, pick time-period chunk sizes\n",
-    " - For each time-period chunk, create sub-folders by time-period within the model/variant/scenario folder that contains all the pertinent variables for that time-period chunk\n",
-    " - Create folders for output\n",
-    " - Create the model run wrapper to run tc_risk on each time-period chunk folder for X draws\n",
-    "    - Run once globally\n",
-    "    - Then for each basin run X times\n",
-    " - Combine the outputs? Process them?"
+    "# Run TC Risk model\n",
+    "\n",
+    "## 01. Create input folders and files\n",
+    "\n",
+    "### 1a_create_tc_risk_input_folder.py\n",
+    "**Description:**  \n",
+    "Creates the required input folder structure for the TC-risk model.\n",
+    "\n",
+    "**Main Function:**  \n",
+    "- `main()`  \n",
+    "  - **Inputs:**  \n",
+    "    - `--data_source` (default: cmip6)\n",
+    "    - `--model`\n",
+    "    - `--variant`\n",
+    "    - `--scenario`\n",
+    "    - `--time_bin`\n",
+    "  - **Output:**  \n",
+    "    - Creates a directory at `[TC_RISK_INPUT_PATH]/[data_source]/[model]/[variant]/[scenario]/[time_bin]`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 1b_process_time_chunk.py\n",
+    "**Description:**  \n",
+    "Processes and combines climate variable files for a given time bin, optionally regridding them.\n",
+    "\n",
+    "**Main Function:**  \n",
+    "- `main()`  \n",
+    "  - **Inputs:**  \n",
+    "    - `--data_source`\n",
+    "    - `--model`\n",
+    "    - `--variant`\n",
+    "    - `--scenario`\n",
+    "    - `--time_bin`\n",
+    "    - `--variable`\n",
+    "    - `--grid`\n",
+    "    - `--frequency`\n",
+    "    - `--needs_regridding_str`\n",
+    "  - **Output:**  \n",
+    "    - Combines files and writes output NetCDF to `[TC_RISK_INPUT_PATH]/[data_source]/[model]/[variant]/[scenario]/[time_bin]`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 02. Run TC Risk model\n",
+    "\n",
+    "### 2a_create_tc_risk_output_folders.py\n",
+    "**Description:**  \n",
+    "Creates output folders for storing TC-risk model results.\n",
+    "\n",
+    "**Main Function:**  \n",
+    "- `main()`  \n",
+    "  - **Inputs:**  \n",
+    "    - `--data_source`\n",
+    "    - `--model`\n",
+    "    - `--variant`\n",
+    "    - `--scenario`\n",
+    "    - `--time_bin`\n",
+    "  - **Output:**  \n",
+    "    - Creates a directory at `[TC_RISK_OUTPUT_PATH]/[data_source]/[model]/[variant]/[scenario]/[time_bin]`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2b_run_global_tc_risk.py\n",
+    "**Description:**  \n",
+    "Generates and runs the TC-risk model for the global basin.\n",
+    "\n",
+    "**Main Functions:**  \n",
+    "- `main()`  \n",
+    "  - **Inputs:**  \n",
+    "    - `--data_source`\n",
+    "    - `--model`\n",
+    "    - `--variant`\n",
+    "    - `--scenario`\n",
+    "    - `--time_bin`\n",
+    "  - **Associated Functions:**  \n",
+    "    - `create_custom_namelist`: Generates a configuration file for the run.\n",
+    "    - `execute_tc_risk`: Executes the TC-risk model using the generated namelist.\n",
+    "  - **Output:**  \n",
+    "    - Runs the TC-risk model and writes output files to the corresponding output directory.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2c_run_basin_tc_risk.py\n",
+    "**Description:**  \n",
+    "Runs the TC-risk model for a specific basin and number of draws.\n",
+    "\n",
+    "**Main Functions:**  \n",
+    "- `main()`  \n",
+    "  - **Inputs:**  \n",
+    "    - `--data_source`\n",
+    "    - `--model`\n",
+    "    - `--variant`\n",
+    "    - `--scenario`\n",
+    "    - `--time_bin`\n",
+    "    - `--basin`\n",
+    "    - `--num_draws`\n",
+    "  - **Associated Functions:**  \n",
+    "    - `create_custom_namelist`: Generates a configuration file for the basin.\n",
+    "    - `execute_tc_risk`: Runs the TC-risk model for each draw.\n",
+    "  - **Output:**  \n",
+    "    - Writes basin-specific output files to the output directory.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Each script is designed to be run independently or orchestrated via workflow scripts, and together they automate the preparation and execution of TC-risk model runs for climate data. For details on the functions, see `tc_risk_functions.py`."
    ]
   }
  ],
