--- a/src/idd_climate_models/clean_and_split/test.ipynb
+++ b/src/idd_climate_models/clean_and_split/test.ipynb
@@ -28020,14 +28020,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c0b79c42",
    "metadata": {},
    "outputs": [],
    "source": [
     "FOLDER_STRUCTURE = {\n",
     "    'data': ['model', 'variant', 'scenario', 'variable', 'grid', 'frequency'],\n",
-    "    'tc_risk': ['model', 'variant', 'scenario', 'time-period']\n",
+    "    'tc_risk': ['model', 'variant', 'scenario', 'time_period']\n",
     "}\n"
    ]
   },
