--- a/notebooks/archive/01_run_tc_risk/01_create_time_period_chunks.ipynb
+++ b/notebooks/archive/01_run_tc_risk/01_create_time_period_chunks.ipynb
@@ -26,14 +26,14 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "Unexpected kwarg. Task Template requires {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario'}, got {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario', 'needs_regridding'}",
+     "evalue": "Unexpected kwarg. Task Template requires {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_period', 'variant', 'scenario'}, got {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_period', 'variant', 'scenario', 'needs_regridding'}",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 225\u001b[39m\n\u001b[32m    223\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m        Requesting Mem: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mmemory\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Run: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mruntime\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Cores: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mcores\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    224\u001b[39m \u001b[38;5;66;03m# --- TASK CREATION ---\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m225\u001b[39m process_task = \u001b[43mprocess_template\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate_task\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    226\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Inject dynamic resources here\u001b[39;49;00m\n\u001b[32m    227\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompute_resources\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m    228\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    229\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcores\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcores\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    230\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mruntime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mruntime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    231\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mqueue\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mqueue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# Use the default queue if specific queue not needed\u001b[39;49;00m\n\u001b[32m    232\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mproject\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdata_source\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mDATA_SOURCE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    235\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    236\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvariant\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvariant_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    237\u001b[39m \u001b[43m    \u001b[49m\u001b[43mscenario\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenario\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    238\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtime_bin\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime_bin_str\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    239\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvariable\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvariable\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    240\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrid\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetails\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mgrid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    241\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfrequency\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetails\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfrequency\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    242\u001b[39m \u001b[43m    \u001b[49m\u001b[43mneeds_regridding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mneeds_regridding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    243\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    245\u001b[39m process_tasks.append(process_task)\n\u001b[32m    247\u001b[39m \u001b[38;5;66;03m# Add dependency: process_task depends on folder_task\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 225\u001b[39m\n\u001b[32m    223\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m        Requesting Mem: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mmemory\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Run: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mruntime\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Cores: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource_request[\u001b[33m'\u001b[39m\u001b[33mcores\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    224\u001b[39m \u001b[38;5;66;03m# --- TASK CREATION ---\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m225\u001b[39m process_task = \u001b[43mprocess_template\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate_task\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    226\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Inject dynamic resources here\u001b[39;49;00m\n\u001b[32m    227\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompute_resources\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m    228\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    229\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcores\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcores\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    230\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mruntime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mresource_request\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mruntime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    231\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mqueue\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mqueue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# Use the default queue if specific queue not needed\u001b[39;49;00m\n\u001b[32m    232\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mproject\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdata_source\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mDATA_SOURCE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    235\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    236\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvariant\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvariant_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    237\u001b[39m \u001b[43m    \u001b[49m\u001b[43mscenario\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenario\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    238\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtime_period\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime_period_str\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    239\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvariable\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvariable\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    240\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrid\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetails\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mgrid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    241\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfrequency\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetails\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfrequency\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    242\u001b[39m \u001b[43m    \u001b[49m\u001b[43mneeds_regridding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mneeds_regridding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    243\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    245\u001b[39m process_tasks.append(process_task)\n\u001b[32m    247\u001b[39m \u001b[38;5;66;03m# Add dependency: process_task depends on folder_task\u001b[39;00m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda/envs/idd-climate-models/lib/python3.12/site-packages/jobmon/client/task_template.py:592\u001b[39m, in \u001b[36mTaskTemplate.create_task\u001b[39m\u001b[34m(self, name, upstream_tasks, task_attributes, max_attempts, compute_resources, compute_resources_callable, resource_scales, cluster_name, fallback_queues, **kwargs)\u001b[39m\n\u001b[32m    590\u001b[39m \u001b[38;5;66;03m# kwargs quality assurance\u001b[39;00m\n\u001b[32m    591\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.active_task_template_version.template_args != \u001b[38;5;28mset\u001b[39m(kwargs.keys()):\n\u001b[32m--> \u001b[39m\u001b[32m592\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    593\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnexpected kwarg. Task Template requires \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    594\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.active_task_template_version.template_args\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mset\u001b[39m(kwargs.keys())\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    595\u001b[39m     )\n\u001b[32m    597\u001b[39m \u001b[38;5;66;03m# validate non-empty resource_scale dicts\u001b[39;00m\n\u001b[32m    598\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m resource_scales:\n",
-      "\u001b[31mValueError\u001b[39m: Unexpected kwarg. Task Template requires {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario'}, got {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_bin', 'variant', 'scenario', 'needs_regridding'}"
+      "\u001b[31mValueError\u001b[39m: Unexpected kwarg. Task Template requires {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_period', 'variant', 'scenario'}, got {'data_source', 'model', 'frequency', 'variable', 'grid', 'time_period', 'variant', 'scenario', 'needs_regridding'}"
      ]
     }
    ],
@@ -110,7 +110,7 @@
     "    }\n",
     "\n",
     "TIME_BINS = {\n",
-    "    scenario: rfc.get_time_bins(scenario, BIN_SIZE_YEARS)\n",
+    "    scenario: rfc.get_time_periods(scenario, BIN_SIZE_YEARS)\n",
     "    for scenario in rfc.SCENARIOS\n",
     "}\n",
     "\n",
@@ -168,9 +168,9 @@
     "        \"--model {{model}} \"\n",
     "        \"--variant {{variant}} \" \n",
     "        \"--scenario {{scenario}} \"\n",
-    "        \"--time_bin {{time_bin}} \"\n",
+    "        \"--time_period {{time_period}} \"\n",
     "    ).format(script_root=SCRIPT_ROOT),\n",
-    "    node_args=[\"data_source\", \"model\", \"variant\", \"scenario\", \"time_bin\"],\n",
+    "    node_args=[\"data_source\", \"model\", \"variant\", \"scenario\", \"time_period\"],\n",
     "    task_args=[],\n",
     "    op_args=[],\n",
     ")\n",
@@ -192,13 +192,13 @@
     "        \"--model {{model}} \"\n",
     "        \"--variant {{variant}} \"\n",
     "        \"--scenario {{scenario}} \"\n",
-    "        \"--time_bin {{time_bin}} \"\n",
+    "        \"--time_period {{time_period}} \"\n",
     "        \"--variable {{variable}} \"\n",
     "        \"--grid {{grid}} \"\n",
     "        \"--frequency {{frequency}} \"\n",
     "        \"--needs_regridding {{needs_regridding}} \"\n",
     "    ).format(script_root=SCRIPT_ROOT),\n",
-    "    node_args=[\"data_source\", \"model\", \"variant\", \"scenario\", \"time_bin\", \"variable\", \"grid\", \"frequency\", \"needs_regridding\"],\n",
+    "    node_args=[\"data_source\", \"model\", \"variant\", \"scenario\", \"time_period\", \"variable\", \"grid\", \"frequency\", \"needs_regridding\"],\n",
     "    task_args=[],\n",
     "    op_args=[],\n",
     ")\n",
@@ -221,10 +221,10 @@
     "    variant_name = mv_info['variant']\n",
     "    \n",
     "    for scenario in rfc.SCENARIOS:\n",
-    "        for time_bin_tuple in TIME_BINS[scenario]:\n",
-    "            time_bin_str = f\"{time_bin_tuple[0]}-{time_bin_tuple[1]}\"\n",
+    "        for time_period_tuple in TIME_BINS[scenario]:\n",
+    "            time_period_str = f\"{time_period_tuple[0]}-{time_period_tuple[1]}\"\n",
     "            \n",
-    "            parent_key = (model_name, variant_name, scenario, time_bin_str)\n",
+    "            parent_key = (model_name, variant_name, scenario, time_period_str)\n",
     "            \n",
     "            # --- LEVEL 1: CREATE PARENT (FOLDER) TASK ---\n",
     "            folder_task = folder_template.create_task(\n",
@@ -232,7 +232,7 @@
     "                model = model_name,\n",
     "                variant = variant_name,\n",
     "                scenario = scenario,\n",
-    "                time_bin = time_bin_str,\n",
+    "                time_period = time_period_str,\n",
     "            )\n",
     "            \n",
     "            folder_tasks.append(folder_task)\n",
@@ -252,7 +252,7 @@
     "                # 1. CONSTRUCT PATH TO A REPRESENTATIVE INPUT FILE\n",
     "                source_file_dir = PROCESSED_DATA_PATH / DATA_SOURCE / model_name / variant_name / scenario / variable / details['grid'] / details['frequency']\n",
     "                resource_request, needs_regridding = get_resource_info(file_path=source_file_dir, representative='first', num_files = BIN_SIZE_YEARS)\n",
-    "                print(f\"Variable: {variable} | Model: {model_name} | Variant: {variant_name} | Scenario: {scenario} | Time Bin: {time_bin_str} ->\" )\n",
+    "                print(f\"Variable: {variable} | Model: {model_name} | Variant: {variant_name} | Scenario: {scenario} | Time Bin: {time_period_str} ->\" )\n",
     "                print(f\"        Requesting Mem: {resource_request['memory']}, Run: {resource_request['runtime']}, Cores: {resource_request['cores']}\")\n",
     "                # --- TASK CREATION ---\n",
     "                process_task = process_template.create_task(\n",
@@ -268,7 +268,7 @@
     "                    model = model_name,\n",
     "                    variant = variant_name,\n",
     "                    scenario = scenario,\n",
-    "                    time_bin = time_bin_str,\n",
+    "                    time_period = time_period_str,\n",
     "                    variable = variable,\n",
     "                    grid = details['grid'],\n",
     "                    frequency = details['frequency'],\n",
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "validation_info['output_validation_dict']['validation_results']['AWI-CM-1-1-MR']['variant']['r1i1p1f1']['scenario']['ssp245']['time-period']['2095-2100']"
+    "validation_info['output_validation_dict']['validation_results']['AWI-CM-1-1-MR']['variant']['r1i1p1f1']['scenario']['ssp245']['time_period']['2095-2100']"
    ]
   },
   {
